cleanup project, change icon package, change configuration of template.html

--- a/public/assets/template.html
+++ b/public/assets/template.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -24,8 +25,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="icon" type="png" sizes="200x200" href="/icon.png" />
-    <link rel="apple-touch-icon" type="png" sizes="200x200" href="/icon.png" />
+    <!-- <link rel="icon" type="png" sizes="200x200" href="/icon.png" /> -->
+    <!-- <link rel="apple-touch-icon" type="png" sizes="200x200" href="/icon.png" /> -->
   </head>
   <body>
     <div id="app"></div>
